<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coincraver</string>
    <string name="settings">Settings</string>
    <string name="animate_coincraver">Coincraver</string>
    <string name="Button1">Start Game</string>
    <string name="Button2">Settings</string>
    <string name="Button3">About</string>
    <string name="title">Coincraver</string>
    <string name="descp">Description</string>
    <string name="ActivateMusic">Activate Music ?</string>
    <string name="controls">Controls</string>
    <string name="back">Go Back!</string>
    <string name="activate">Sound Activator</string>
    <string name="ControlDisplay">Controls: The most simple game ever.
        Tap on the screen to jump and save yourself from the holes. 
        At the same time, you can collect the coins and pump up
        the score. Enjoy @coincraver :) :)</string>

</resources>