<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/main_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/cycleimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="430dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/descp" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/main_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:minWidth="30dp"
        android:text="@string/Button1"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/start_game_button"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/Button3"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/about_button"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/Button2"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:contentDescription="@string/descp"
        android:id="@+id/backmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_button"
        android:layout_centerHorizontal="true"
        android:src="@drawable/back" />

</RelativeLayout>