<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/rectangle"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/music_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:text="@string/ActivateMusic"
        android:textColor="@color/White"
        android:textSize="28sp" />

    <Button
        android:id="@+id/control_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/controls" />

    <TextView
        android:id="@+id/show_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/control_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:maxWidth="600dp"
        android:textColor="@color/White"
        android:textSize="20sp" />
    
   <ImageView
        android:contentDescription="@string/descp"
   		android:id="@+id/backsettings"
   		android:src="@drawable/back"
   		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="270dp"
        android:layout_marginStart="270dp"/>

</RelativeLayout>